2001-01-18  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_archive)  Add support for summary mode,
	which lists the archives available and the number of bytes,
	lines, and messages in each archive.  
	(archive_chunk) Change the default behavior
	of the "archive-get" command:  mail the messages individually,
	unless "digest" mode is also specified.
	(_createlist) Add missing MIME::Entity declaration.  Noted
	by Marc Fournier.
	The version number is now 0.1200101180

	* lib/Mj/Access.pm:  (_a_default)  Add password-only access
	settings to the *_access and *_policy configuration settings.
	_access settings can include open+password or list+password,
	and _policy settings can include open+password or auto+password.

	* lib/Mj/Archive.pm:  (summary)  New routine. Return the message, 
	byte, and line count of each archive file.

	* lib/Mj/List.pm:  (archive_get_to_file, archive_summary) 
	New routines.  Wrappers for Mj::Archive::{get_to_file,summary}.

	* lib/Mj/Deliver/Envelope.pm:  (new)  Allow an empty envelope
	sender.  Suggested by Rudolph T Maceyko.

2001-01-12  Michael Yount <csf@moscow.com>

	* bin/mj_queuerun:  (parse_commands)  Record data for messages
	which contain no valid commands.  After a threshold is reached,
	send the results to the domain owner instead of replying to
	the originator.  This will prevent an autoresponder mail loop
	with Majordomo if the message contains no valid commands.

	* lib/Majordomo.pm:  (record_parser_data, _make_parser_data)  
	Store a record containing the date and count of commands issued by a 
	particular address.  At the moment, this is only used to
	restrict autoresponder loops.
	(_subscribe, _unsubscribe)  Do not alter the registry when
	an address is subscribed to or unsubscribed from an auxiliary 
	list.
	(_unregister)  Log/inform for each of the individual unsubs.

	* setup/setup_func.pl:  (install_config_templates)  Run the
	Majordomo commands in the setup/config_commands file.  These